gpu tpu preemptible

--- a/samples/tutorials/gpu/gpu.ipynb
+++ b/samples/tutorials/gpu/gpu.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,91 @@
    "metadata": {},
    "source": [
     "It's expected it runs well and you will see different \"nvidia-smi\" logs from the two pipeline steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preemptible GPU\n",
+    "Preemptible GPU resource is more cheaper but it also means your task requires retries.\n",
+    "\n",
+    "Please notice the following only difference is that it added **--preemptible** and **--node-taints=preemptible=true:NoSchedule** parameters.\n",
+    "\n",
+    "```\n",
+    "export GPU_POOL_NAME=v100pool-preemptible\n",
+    "export CLUSTER_NAME=existingClusterName\n",
+    "export CLUSTER_ZONE=us-west1-a\n",
+    "export GPU_TYPE=nvidia-tesla-v100\n",
+    "export GPU_COUNT=1\n",
+    "export MACHINE_TYPE=n1-highmem-8\n",
+    "\n",
+    "gcloud container node-pools create ${GPU_POOL_NAME} \\\n",
+    "  --accelerator type=${GPU_TYPE},count=${GPU_COUNT} \\\n",
+    "  --zone ${CLUSTER_ZONE} --cluster ${CLUSTER_NAME} \\\n",
+    "  --preemptible \\\n",
+    "  --node-taints=preemptible=true:NoSchedule \\\n",
+    "  --num-nodes=0 --machine-type=${MACHINE_TYPE} --min-nodes=0 --max-nodes=5 --enable-autoscaling\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import kfp\n",
+    "import kfp.gcp as gcp\n",
+    "from kfp import dsl\n",
+    "\n",
+    "def gpu_p100_op():\n",
+    "    return dsl.ContainerOp(\n",
+    "        name='check_p100',\n",
+    "        image='tensorflow/tensorflow:latest-gpu',\n",
+    "        command=['sh', '-c'],\n",
+    "        arguments=['nvidia-smi']\n",
+    "    ).set_gpu_limit(1).add_node_selector_constraint('cloud.google.com/gke-accelerator', 'nvidia-tesla-p100')\n",
+    "\n",
+    "def gpu_v100_op():\n",
+    "    return dsl.ContainerOp(\n",
+    "        name='check_v100',\n",
+    "        image='tensorflow/tensorflow:latest-gpu',\n",
+    "        command=['sh', '-c'],\n",
+    "        arguments=['nvidia-smi']\n",
+    "    ).set_gpu_limit(1).add_node_selector_constraint('cloud.google.com/gke-accelerator', 'nvidia-tesla-v100')\n",
+    "\n",
+    "def gpu_v100_preemptible_op():\n",
+    "    v100_op = dsl.ContainerOp(\n",
+    "        name='check_v100_preemptible',\n",
+    "        image='tensorflow/tensorflow:latest-gpu',\n",
+    "        command=['sh', '-c'],\n",
+    "        arguments=['nvidia-smi'])\n",
+    "    v100_op.set_gpu_limit(1)\n",
+    "    v100_op.add_node_selector_constraint('cloud.google.com/gke-accelerator', 'nvidia-tesla-v100')\n",
+    "    v100_op.apply(gcp.use_preemptible_nodepool(hard_constraint=True))\n",
+    "    return v100_op\n",
+    "\n",
+    "@dsl.pipeline(\n",
+    "    name='GPU smoking check',\n",
+    "    description='Smoking check whether GPU env is ready.'\n",
+    ")\n",
+    "def gpu_pipeline():\n",
+    "    gpu_p100 = gpu_p100_op()\n",
+    "    gpu_v100 = gpu_v100_op()\n",
+    "    gpu_v100_preemptible = gpu_v100_preemptible_op()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    kfp.compiler.Compiler().compile(gpu_pipeline, 'gpu_smoking_check.yaml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TPU\n",
+    "Google's TPU is awesome. It's faster and lower TOC. To consume TPU, no need to create node-pool, just call KFP SDK to use it. Here is a [doc](https://www.kubeflow.org/docs/gke/pipelines/enable-gpu-and-tpu/#configure-containerop-to-consume-tpus). Please notice that not all regions has TPU yet.\n",
+    "\n"
    ]
   },
   {
