add some comments

--- a/tools/benchmarks/pipeline_service_api.ipynb
+++ b/tools/benchmarks/pipeline_service_api.ipynb
@@ -15,17 +15,18 @@
     "from kfp.components import create_component_from_func\n",
     "from datetime import datetime, timezone, timedelta\n",
     "\n",
-    "# plot libs\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "\n",
-    "# change number of nodes and number of uploads here\n",
+    "# CHANGE necessary paramters here\n",
+    "# host is your KFP endpoint\n",
     "host = 'http://127.0.0.1:3000'\n",
+    "# number of times you want to upload the pipeline\n",
+    "num_uploads = 1000\n",
     "num_nodes = 10\n",
-    "num_uploads = 10\n",
     "\n",
     "file_name = 'test_' + str(num_nodes) + '_nodes.yaml'\n",
     "pipeline_name_prefix = 'pipeline_' + os.path.splitext(file_name)[0] + '_'\n",
@@ -78,11 +79,20 @@
     "      pipeline = client.pipelines.get_pipeline(i)  \n",
     "      dur = time.perf_counter() - start\n",
     "      get_latencies.append(dur)      \n",
+    "        \n",
+    "    # Measure delete latency\n",
+    "    delete_latencies= []\n",
+    "    for i in uploaded_pipeline_ids:\n",
+    "      start = time.perf_counter()\n",
+    "      pipeline = client.pipelines.delete_pipeline(i)  \n",
+    "      dur = time.perf_counter() - start\n",
+    "      delete_latencies.append(dur)\n",
     "\n",
     "    # Plot\n",
-    "    fig, axs = plt.subplots(nrows=2)\n",
+    "    fig, axs = plt.subplots(nrows=3)\n",
     "    sns.distplot(a=upload_latencies, ax=axs[0])\n",
     "    sns.distplot(a=get_latencies, ax=axs[1])\n",
+    "    sns.distplot(a=delete_latencies, ax=axs[1])\n",
     "    \n",
     "    # TODO(jingzhang36): maybe dump the durations data to db or gcs, and let searborn read from there"
    ]
