--- a/tools/benchmarks/run_service_api.ipynb
+++ b/tools/benchmarks/run_service_api.ipynb
@@ -16,15 +16,16 @@
     "from kfp.components import create_component_from_func\n",
     "from datetime import datetime, timezone, timedelta\n",
     "\n",
-    "# plot libs\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "\n",
-    "# change number of nodes and number of uploads here\n",
+    "# CHANGE necessary paramters here\n",
+    "# host is your KFP endpoint\n",
     "host = 'http://127.0.0.1:3000'\n",
+    "# number of times you want to run the pipeline\n",
     "num_runs = 50\n",
     "\n",
     "file_name = 'pipeline_10_nodes.yaml'\n",
