scope and quota comment

--- a/samples/tutorials/gpu/gpu.ipynb
+++ b/samples/tutorials/gpu/gpu.ipynb
@@ -18,6 +18,8 @@
     "gcloud compute accelerator-types list\n",
     "```\n",
     "\n",
+    "You may also check or edit the GCP's **GPU Quota** to make sure you still have GPU quota in the region.\n",
+    "\n",
     "To well saving the costs, it's possible you create a zero-sized node pool for GPU and enable the autoscaling.\n",
     "\n",
     "Here is an example to create a P100 GPU node pool for a cluster.\n",
@@ -36,8 +38,11 @@
     "gcloud container node-pools create ${GPU_POOL_NAME} \\\n",
     "  --accelerator type=${GPU_TYPE},count=${GPU_COUNT} \\\n",
     "  --zone ${CLUSTER_ZONE} --cluster ${CLUSTER_NAME} \\\n",
-    "  --num-nodes=0 --machine-type=${MACHINE_TYPE} --min-nodes=0 --max-nodes=5 --enable-autoscaling\n",
+    "  --num-nodes=0 --machine-type=${MACHINE_TYPE} --min-nodes=0 --max-nodes=5 --enable-autoscaling \\\n",
+    "  --scopes=cloud-platform\n",
     "```\n",
+    "\n",
+    "Here in this sample, we specified **--scopes=cloud-platform**. More info is [here](https://cloud.google.com/sdk/gcloud/reference/container/node-pools/create#--scopes). It will allow the job in the node pool to use GCE Default Service Account to access GCP APIs (e.x. GCS etc.). You also use [Workload Identity](https://cloud.google.com/kubernetes-engine/docs/how-to/workload-identity) or [Application Default Credential](https://cloud.google.com/docs/authentication/production) to replace **--scopes=cloud-platform**.\n",
     "\n",
     "## Install device driver to the cluster\n",
     "\n",
