added a success vs non-success plot; only measure run durations for succeeded runs

--- a/tools/benchmarks/run_service_api.ipynb
+++ b/tools/benchmarks/run_service_api.ipynb
@@ -41,6 +41,9 @@
     "def run_finished(run_status: string) -> bool:\n",
     "    return run_status in {'Succeeded', 'Failed', 'Error', 'Skipped', 'Terminated'}\n",
     "\n",
+    "def run_succeeded(run_status: string) -> bool:\n",
+    "    return run_status in {'Succeeded'}\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    client = kfp.Client(host)\n",
@@ -88,7 +91,8 @@
     "        create_run_latencies.append(dur)   \n",
     "        created_runs.append(run.run.id)\n",
     "               \n",
-    "    # Wait for the runs to finish.\n",
+    "    # Wait for the runs to finish. \n",
+    "    # TODO(jingzhang36): We can add a timeout for this polling. For now we rely on the timeout of runs in KFP. \n",
     "    while True:\n",
     "        all_finished = True\n",
     "        for i in created_runs:\n",
@@ -103,13 +107,18 @@
     "\n",
     "    # When all runs are finished, measure run durations and get run latencies.\n",
     "    get_run_latencies = []\n",
-    "    run_durations = []\n",
+    "    succeeded_run_durations = []\n",
+    "    run_results = []\n",
     "    for i in created_runs:\n",
     "        start = time.perf_counter()\n",
     "        run = client.runs.get_run(i)  \n",
     "        dur = time.perf_counter() - start\n",
     "        get_run_latencies.append(dur) \n",
-    "        run_durations.append((run.run.finished_at - run.run.created_at).total_seconds())\n",
+    "        if run_succeeded(run.run.status):\n",
+    "            run_results.append('succeeded')\n",
+    "            succeeded_run_durations.append((run.run.finished_at - run.run.created_at).total_seconds())\n",
+    "        else:\n",
+    "            run_results.append('not_succeeded')\n",
     "\n",
     "    # Measure delete run latency.\n",
     "    delete_run_latencies = []\n",
@@ -129,14 +138,18 @@
     "    label_create_run_latencies = pd.Series(create_run_latencies, name='Create Run Latency (Second)')\n",
     "    sns.distplot(a=label_create_run_latencies,  ax=axs[0])\n",
     "    \n",
-    "    label_run_durations = pd.Series(run_durations, name='Run Durations (Second)')\n",
+    "    label_run_durations = pd.Series(succeeded_run_durations, name='Run Durations (Second)')\n",
     "    sns.distplot(a=label_run_durations,  ax=axs[1])    \n",
     "\n",
     "    label_get_run_latencies = pd.Series(get_run_latencies, name='Get Run Latency (Second)')\n",
     "    sns.distplot(a=label_get_run_latencies,  ax=axs[2])    \n",
     "    \n",
     "    label_delete_run_latencies = pd.Series(delete_run_latencies, name='Delete Run Latency (Second)')\n",
-    "    sns.distplot(a=label_delete_run_latencies,  ax=axs[3])"
+    "    sns.distplot(a=label_delete_run_latencies,  ax=axs[3])\n",
+    "    \n",
+    "    loaded_run_results = pd.DataFrame(np.array(run_results), columns=['result'])\n",
+    "    sns.catplot(x='result', kind=\"count\", data=loaded_run_results)\n",
+    "    "
    ]
   },
   {
