Enabled the blessing output of the Evaluator
The Evaluator does not always write to that URI, but for components with URI-based I/O this does not matter.

--- a/components/tfx/_samples/TFX_DataFlow_pipeline.ipynb
+++ b/components/tfx/_samples/TFX_DataFlow_pipeline.ipynb
@@ -162,7 +162,8 @@
     "        }),\n",
     "        beam_pipeline_args=beam_pipeline_args,\n",
     "\n",
-    "        output_evaluation_uri=generated_output_uri,\n",
+    "        output_evaluation_uri=generated_output_uri + '/evaluation',\n",
+    "        output_blessing_uri=generated_output_uri + '/blessing',\n",
     "    )\n",
     "\n",
     "\n",
