wrap relevant workflow and pod parameters from argo in a function in dsl and update tutorials to use it

--- a/components/tfx/_samples/TFX_Dataflow_pipeline.ipynb
+++ b/components/tfx/_samples/TFX_Dataflow_pipeline.ipynb
@@ -83,7 +83,7 @@
     "    input_data_uri,\n",
     "    root_output_uri,\n",
     "):\n",
-    "    generated_output_uri = root_output_uri + kfp.dsl.EXECUTION_ID_PLACEHOLDER\n",
+    "    generated_output_uri = root_output_uri + kfp.dsl.get_run_information_placeholder('EXECUTION_ID')\n",
     "\n",
     "    examples_task = CsvExampleGen_op(\n",
     "        input_uri=input_data_uri,\n",
