--- a/samples/core/parameterized_tfx_oss/taxi_pipeline_notebook.ipynb
+++ b/samples/core/parameterized_tfx_oss/taxi_pipeline_notebook.ipynb
@@ -115,7 +115,7 @@
     "# Note that when running on KFP, the pipeline root is always a runtime parameter.\n",
     "# The value specified here will be its default.\n",
     "pipeline_root = os.path.join('gs://{{kfp-default-bucket}}', 'tfx_taxi_simple',\n",
-    "                              kfp.dsl.RUN_ID_PLACEHOLDER)\n",
+    "                              kfp.dsl.get_run_information_placeholder('RUN_ID'))\n",
     "\n",
     "# Location of input data, should be a GCS path under which there is a csv file.\n",
     "data_root_param = data_types.RuntimeParameter(\n",
@@ -299,7 +299,7 @@
     "    pipeline_name + '.tar.gz', \n",
     "    arguments={\n",
     "        # Uncomment following lines in order to use custom GCS bucket/module file/training data.\n",
-    "        # 'pipeline-root': 'gs://<your-gcs-bucket>/tfx_taxi_simple/' + kfp.dsl.RUN_ID_PLACEHOLDER,\n",
+    "        # 'pipeline-root': 'gs://<your-gcs-bucket>/tfx_taxi_simple/' + kfp.dsl.get_run_information_placeholder('RUN_ID'),\n",
     "        # 'module-file': '<gcs path to the module file>',  # delete this line to use default module file.\n",
     "        # 'data-root': '<gcs path to the data>'  # delete this line to use default data.\n",
     "})"
