--- a/components/gcp/ml_engine/train/sample.ipynb
+++ b/components/gcp/ml_engine/train/sample.ipynb
@@ -337,13 +337,8 @@
   }
  ],
  "metadata": {
-  "environment": {
-   "name": "common-cpu.m47",
-   "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m47"
-  },
   "kernelspec": {
-   "display_name": "argo",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -357,9 +352,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
