Apply suggestions from code review
Co-authored-by: Animesh Singh <singhan@us.ibm.com>

--- a/samples/contrib/e2e-mnist/mnist-pipeline.ipynb
+++ b/samples/contrib/e2e-mnist/mnist-pipeline.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST End to End examples with Kubeflow compoenents\n",
+    "# MNIST end to end example with Kubeflow components\n",
     "\n",
-    "This pipeline contains 5 steps, it finds the best hyperparameter using Katib, creates PVC for storing models, processes the hyperparameter results, distributedly trains the model on TFJob with the best hyperparameter using more iterations, and finally serves the model using KFServing. You can visit this [medium blog](https://medium.com/@liuhgxa/an-end-to-end-use-case-by-kubeflow-b2f72b0b587) for more details on this pipeline."
+    "This pipeline contains 5 steps, it finds the best hyperparameters using Katib, creates PVC for storing models, processes the hyperparameters optimization results, trains the model using distributed TFJob with the best hyperparameters using more iterations, and finally serves the model using KFServing. You can visit this [medium blog](https://medium.com/@liuhgxa/an-end-to-end-use-case-by-kubeflow-b2f72b0b587) for more details on this pipeline."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "### Define the model name and Kubeflow user namespace\n",
     "\n",
-    "Change the below cell with a name you want to use for this pipeline and which namespace you want to execute on Kubeflow."
+    "Change the below cell with a name you want to use for this pipeline and the namespace you want to execute this Pipeline in Kubeflow."
    ]
   },
   {
@@ -72,7 +72,7 @@
     "\n",
     "@dsl.pipeline(\n",
     "    name=\"End to end pipeline\",\n",
-    "    description=\"An end to end example including hyperparameter tuning, train and inference.\"\n",
+    "    description=\"An end to end example including hyperparameter tuning, training and inference.\"\n",
     ")\n",
     "def mnist_pipeline(\n",
     "        name=model_name,\n",
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the pipeline done, you can get `inferenceservice` name using the below command, for example in this case in my cluster, the `inference-name` is `mnist-demo`"
+    "When the pipeline is done, you can get `inferenceservice` name using the below command, for example in this case in my cluster, the `inference-name` is `mnist-demo`"
    ]
   },
   {
