update notebook description

--- a/samples/contrib/e2e-mnist/mnist-pipeline.ipynb
+++ b/samples/contrib/e2e-mnist/mnist-pipeline.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# MNIST end to end example with Kubeflow components\n",
     "\n",
-    "This pipeline contains 5 steps, it finds the best hyperparameters using Katib, creates PVC for storing models, processes the hyperparameters optimization results, trains the model using distributed TFJob with the best hyperparameters using more iterations, and finally serves the model using KFServing. You can visit this [medium blog](https://medium.com/@liuhgxa/an-end-to-end-use-case-by-kubeflow-b2f72b0b587) for more details on this pipeline."
+    "This pipeline contains 5 steps, it finds the best hyperparameters for the model at 2000 training steps using Katib, creates PVC for storing models, processes the hyperparameters optimization results, trains the model using distributed TFJob with the best hyperparameters using more iterations, and finally serves the model using KFServing. You can visit this [medium blog](https://medium.com/@liuhgxa/an-end-to-end-use-case-by-kubeflow-b2f72b0b587) for more details on this pipeline."
    ]
   },
   {
@@ -51,6 +51,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This pipeline has 3 parameters:\n",
+    "- **name**: model name\n",
+    "- **namespace**: user namespace where the model is going to be trained and served\n",
+    "- **step**: number of training steps for the fine-tuned model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -72,7 +82,7 @@
     "\n",
     "@dsl.pipeline(\n",
     "    name=\"End to end pipeline\",\n",
-    "    description=\"An end to end example including hyperparameter tuning, training and inference.\"\n",
+    "    description=\"An end to end example including hyperparameter tuning, training and inferencing.\"\n",
     ")\n",
     "def mnist_pipeline(\n",
     "        name=model_name,\n",
@@ -387,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the pipeline is done, you can get `inferenceservice` name using the below command, for example in this case in my cluster, the `inference-name` is `mnist-demo`"
+    "When the pipeline is done, you can get `inferenceservice` name using the below command. For example in this case in my cluster, the `inference-name` is `mnist-demo`"
    ]
   },
   {
