Add missing kfserving notebook and pipeline for cifar10 and clean cells

--- a/samples/contrib/e2e-outlier-drift-explainer/kfserving/kfserving_e2e_cifar10.ipynb
+++ b/samples/contrib/e2e-outlier-drift-explainer/kfserving/kfserving_e2e_cifar10.ipynb
@@ -6,14 +6,14 @@
     "tags": []
    },
    "source": [
-    "# Seldon Deployment Pipeline For CIFAR10 Image Recognition\n",
+    "# KFServing Deployment Pipeline For CIFAR10 Image Recognition\n",
     "\n",
     "In this example (and Kale Kubeflow pipeline) we create a deployment pipeline for a pretrained CIFAR10 image model. \n",
     "The following steps will be run:\n",
     "\n",
     " * Setup Minio client\n",
     " * Download and test CIFAR10 model and train an Anchors Images explainer on it. Save both model and explainer to Minio.\n",
-    " * Deploy model and explainer using Seldon and test\n",
+    " * Deploy model and explainer using KFServing and test\n",
     " * Train outlier detector\n",
     " * Train drift detector\n",
     " * Deploy knative eventing display to show asynchronous results from outlier and drift detectors. \n",
@@ -25,7 +25,8 @@
     " You will need a kubeflow cluster >= 1.0 with \n",
     "   \n",
     "  * Knative eventing \n",
-    "  * Seldon >= 1.2.1\n",
+    "  * Seldon >= 1.2.2\n",
+    "  * KFServing >= 0.3.0\n",
     " \n",
     " ### Kubeflow Jupyter Notebook Server\n",
     " \n",
@@ -643,7 +644,7 @@
     "tags": []
    },
    "source": [
-    "## Deploy Seldon Core Model"
+    "## Deploy KFServing Model"
    ]
   },
   {
@@ -655,6 +656,30 @@
      "prev:train_model_and_explainer"
     ]
    },
+   "outputs": [],
+   "source": [
+    "secret=f\"\"\"apiVersion: v1\n",
+    "kind: Secret\n",
+    "metadata:\n",
+    "  name: cifar10-kf-secret\n",
+    "  namespace: {DEPLOY_NAMESPACE}\n",
+    "  annotations:\n",
+    "     serving.kubeflow.org/s3-endpoint: {MINIO_HOST} # replace with your s3 endpoint\n",
+    "     serving.kubeflow.org/s3-usehttps: \"0\" # by default 1, for testing with minio you need to set to 0\n",
+    "type: Opaque\n",
+    "stringData:\n",
+    "  awsAccessKeyID: {MINIO_ACCESS_KEY}\n",
+    "  awsSecretAccessKey: {MINIO_SECRET_KEY}\n",
+    "\"\"\"\n",
+    "with open(\"secret.yaml\",\"w\") as f:\n",
+    "    f.write(secret)\n",
+    "run(\"kubectl apply -f secret.yaml\", shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "secret = f\"\"\"apiVersion: v1\n",
@@ -685,10 +710,10 @@
     "sa = f\"\"\"apiVersion: v1\n",
     "kind: ServiceAccount\n",
     "metadata:\n",
-    "  name: minio-sa\n",
+    "  name: minio-kf-sa\n",
     "  namespace: {DEPLOY_NAMESPACE}\n",
     "secrets:\n",
-    "  - name: seldon-init-container-secret\n",
+    "  - name: cifar10-kf-secret\n",
     "\"\"\"\n",
     "with open(\"sa.yaml\",\"w\") as f:\n",
     "    f.write(sa)\n",
@@ -703,30 +728,46 @@
    },
    "outputs": [],
    "source": [
-    "model_yaml=f\"\"\"apiVersion: machinelearning.seldon.io/v1\n",
-    "kind: SeldonDeployment\n",
-    "metadata:\n",
-    "  name: cifar10-classifier\n",
-    "  namespace: {DEPLOY_NAMESPACE}\n",
-    "spec:\n",
-    "  protocol: tensorflow\n",
-    "  predictors:\n",
-    "  - componentSpecs:\n",
-    "    graph:\n",
-    "      implementation: TENSORFLOW_SERVER\n",
-    "      modelUri: s3://{MINIO_MODEL_BUCKET}/{CIFAR10_MODEL_PATH}\n",
-    "      envSecretRefName: seldon-init-container-secret\n",
-    "      name: classifier\n",
-    "      logger:\n",
-    "         mode: all\n",
-    "    explainer:\n",
-    "      type: AnchorImages\n",
-    "    name: default\n",
-    "    replicas: 1\n",
-    "\"\"\"\n",
-    "with open(\"model.yaml\",\"w\") as f:\n",
-    "    f.write(model_yaml)\n",
-    "run(\"kubectl apply -f model.yaml\", shell=True)"
+    "from kubernetes import client\n",
+    "from kfserving import KFServingClient\n",
+    "from kfserving import constants\n",
+    "from kfserving import utils\n",
+    "from kfserving import V1alpha2EndpointSpec\n",
+    "from kfserving import V1alpha2PredictorSpec\n",
+    "from kfserving import V1alpha2ExplainerSpec\n",
+    "from kfserving import V1alpha2AlibiExplainerSpec\n",
+    "from kfserving import V1alpha2TensorflowSpec\n",
+    "from kfserving import V1alpha2InferenceServiceSpec\n",
+    "from kfserving import V1alpha2InferenceService\n",
+    "from kfserving import V1alpha2Logger\n",
+    "from kubernetes.client import V1ResourceRequirements\n",
+    "\n",
+    "api_version = constants.KFSERVING_GROUP + '/' + constants.KFSERVING_VERSION\n",
+    "default_endpoint_spec = V1alpha2EndpointSpec(\n",
+    "                          predictor=V1alpha2PredictorSpec(\n",
+    "                            service_account_name='minio-kf-sa',\n",
+    "                            tensorflow=V1alpha2TensorflowSpec(\n",
+    "                              storage_uri='s3://'+MINIO_MODEL_BUCKET+'/'+ CIFAR10_MODEL_PATH,\n",
+    "                              resources=V1ResourceRequirements(\n",
+    "                                  requests={'cpu':'100m','memory':'1Gi'},\n",
+    "                                  limits={'cpu':'100m', 'memory':'1Gi'})),\n",
+    "                            logger=V1alpha2Logger(\n",
+    "                                mode='all'\n",
+    "                            )),\n",
+    "                            explainer=V1alpha2ExplainerSpec(\n",
+    "                              service_account_name='minio-kf-sa',\n",
+    "                            alibi=V1alpha2AlibiExplainerSpec(\n",
+    "                              type='AnchorImages',\n",
+    "                              storage_uri='s3://'+MINIO_MODEL_BUCKET+'/'+ EXPLAINER_MODEL_PATH,\n",
+    "                              resources=V1ResourceRequirements(\n",
+    "                                  requests={'cpu':'100m','memory':'1Gi'},\n",
+    "                                  limits={'cpu':'100m', 'memory':'1Gi'}))))\n",
+    "    \n",
+    "isvc = V1alpha2InferenceService(api_version=api_version,\n",
+    "                          kind=constants.KFSERVING_KIND,\n",
+    "                          metadata=client.V1ObjectMeta(\n",
+    "                              name='kf-cifar10', namespace=DEPLOY_NAMESPACE),\n",
+    "                          spec=V1alpha2InferenceServiceSpec(default=default_endpoint_spec))"
    ]
   },
   {
@@ -737,7 +778,8 @@
    },
    "outputs": [],
    "source": [
-    "run(f\"kubectl rollout status -n {DEPLOY_NAMESPACE} deploy/$(kubectl get deploy -l seldon-deployment-id=cifar10-classifier -o jsonpath='{{.items[0].metadata.name}}' -n {DEPLOY_NAMESPACE})\", shell=True)"
+    "KFServing = KFServingClient()\n",
+    "KFServing.create(isvc)"
    ]
   },
   {
@@ -748,7 +790,7 @@
    },
    "outputs": [],
    "source": [
-    "run(f\"kubectl rollout status -n {DEPLOY_NAMESPACE} deploy/$(kubectl get deploy -l seldon-deployment-id=cifar10-classifier -o jsonpath='{{.items[1].metadata.name}}' -n {DEPLOY_NAMESPACE})\", shell=True)"
+    "KFServing.get('kf-cifar10', namespace=DEPLOY_NAMESPACE, watch=True, timeout_seconds=240)"
    ]
   },
   {
@@ -757,14 +799,17 @@
     "tags": []
    },
    "source": [
-    "Make a prediction request"
+    "## Test Model and Explainer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "block:test_model_and_explainer",
+     "prev:deploy_model"
+    ]
    },
    "outputs": [],
    "source": [
@@ -772,9 +817,10 @@
     " idx=10\n",
     " test_example=X_test[idx:idx+1].tolist()\n",
     " payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
-    " cmd=f\"\"\"curl -d '{payload}' \\\n",
-    "   http://cifar10-classifier-default.{DEPLOY_NAMESPACE}:8000/v1/models/classifier/:predict \\\n",
-    "   -H \"Content-Type: application/json\"\n",
+    " cmd=f\"\"\"curl -v -d '{payload}' \\\n",
+    "   -H \"Host: kf-cifar10.admin.example.com\" \\\n",
+    "   -H \"Content-Type: application/json\" \\\n",
+    "   http://kfserving-ingressgateway.istio-system/v1/models/kf-cifar10:predict\n",
     " \"\"\"\n",
     " ret = Popen(cmd, shell=True,stdout=PIPE)\n",
     " raw = ret.stdout.read().decode(\"utf-8\")\n",
@@ -815,16 +861,18 @@
    },
    "outputs": [],
    "source": [
-    "idx=10\n",
+    "idx=1\n",
     "test_example=X_test[idx:idx+1].tolist()\n",
     "payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
-    "cmd=f\"\"\"curl -d '{payload}' \\\n",
-    "   http://cifar10-classifier-default-explainer.{DEPLOY_NAMESPACE}:9000/v1/models/cifar10-classifier/:explain \\\n",
-    "   -H \"Content-Type: application/json\"\n",
+    "cmd=f\"\"\"curl -v -d '{payload}' \\\n",
+    "   -H \"Host: kf-cifar10.admin.example.com\" \\\n",
+    "   -H \"Content-Type: application/json\" \\\n",
+    "   http://kfserving-ingressgateway.istio-system/v1/models/kf-cifar10:explain\n",
     "\"\"\"\n",
     "ret = Popen(cmd, shell=True,stdout=PIPE)\n",
     "raw = ret.stdout.read().decode(\"utf-8\")\n",
-    "print(raw)"
+    "res=json.loads(raw)\n",
+    "plt.imshow(np.array(explanation[\"anchor\"]))"
    ]
   },
   {
@@ -844,7 +892,7 @@
      "block:deploy_event_display",
      "prev:train_drift_detector",
      "prev:train_outlier_detector",
-     "prev:deploy_model"
+     "prev:test_model_and_explainer"
     ]
    },
    "outputs": [],
@@ -890,7 +938,7 @@
     "  broker: default\n",
     "  filter:\n",
     "    attributes:\n",
-    "      type: io.seldon.serving.inference.outlier\n",
+    "      type: org.kubeflow.serving.inference.outlier\n",
     "  subscriber:\n",
     "    ref:\n",
     "      apiVersion: v1\n",
@@ -906,7 +954,7 @@
     "  broker: default\n",
     "  filter:\n",
     "    attributes:\n",
-    "      type: io.seldon.serving.inference.drift\n",
+    "      type: org.kubeflow.serving.inference.drift\n",
     "  subscriber:\n",
     "    ref:\n",
     "      apiVersion: v1\n",
@@ -935,7 +983,7 @@
     "tags": []
    },
    "source": [
-    "## Deploy Seldon Outlier Detector"
+    "## Deploy KFServing Outlier Detector"
    ]
   },
   {
@@ -973,9 +1021,9 @@
     "        - --reply_url\n",
     "        - http://default-broker       \n",
     "        - --event_type\n",
-    "        - io.seldon.serving.inference.outlier\n",
+    "        - org.kubeflow.serving.inference.outlier\n",
     "        - --event_source\n",
-    "        - io.seldon.serving.cifar10od\n",
+    "        - org.kubeflow.serving.cifar10od\n",
     "        - OutlierDetector\n",
     "        envFrom:\n",
     "        - secretRef:\n",
@@ -1002,7 +1050,7 @@
     "spec:\n",
     "  filter:\n",
     "    sourceAndType:\n",
-    "      type: io.seldon.serving.inference.request\n",
+    "      type: org.kubeflow.serving.inference.request\n",
     "  subscriber:\n",
     "    ref:\n",
     "      apiVersion: serving.knative.dev/v1\n",
@@ -1031,7 +1079,7 @@
     "tags": []
    },
    "source": [
-    "## Test Seldon Outlier Detection"
+    "## Test KFServing Outlier Detection"
    ]
   },
   {
@@ -1075,22 +1123,24 @@
    },
    "outputs": [],
    "source": [
-    "test_example=X_mask.tolist()\n",
-    "payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
-    "cmd=f\"\"\"curl -d '{payload}' \\\n",
-    "   http://cifar10-classifier-default.{DEPLOY_NAMESPACE}:8000/v1/models/classifier/:predict \\\n",
-    "   -H \"Content-Type: application/json\"\n",
-    "\"\"\"\n",
-    "ret = Popen(cmd, shell=True,stdout=PIPE)\n",
-    "raw = ret.stdout.read().decode(\"utf-8\")\n",
-    "print(raw)\n",
-    "res=json.loads(raw)\n",
-    "arr=np.array(res[\"predictions\"])\n",
-    "plt.imshow(X_mask.reshape(32, 32, 3))\n",
-    "plt.axis('off')\n",
-    "plt.show()\n",
-    "print(\"class:\",class_names[y_train[idx][0]])\n",
-    "print(\"prediction:\",class_names[arr[0].argmax()])"
+    "def predict():\n",
+    "    test_example=X_mask.tolist()\n",
+    "    payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
+    "    cmd=f\"\"\"curl -v -d '{payload}' \\\n",
+    "       -H \"Host: kf-cifar10.admin.example.com\" \\\n",
+    "       -H \"Content-Type: application/json\" \\\n",
+    "       http://kfserving-ingressgateway.istio-system/v1/models/kf-cifar10:predict\n",
+    "     \"\"\"\n",
+    "    ret = Popen(cmd, shell=True,stdout=PIPE)\n",
+    "    raw = ret.stdout.read().decode(\"utf-8\")\n",
+    "    print(raw)\n",
+    "    res=json.loads(raw)\n",
+    "    arr=np.array(res[\"predictions\"])\n",
+    "    plt.imshow(X_mask.reshape(32, 32, 3))\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "    print(\"class:\",class_names[y_train[idx][0]])\n",
+    "    print(\"prediction:\",class_names[arr[0].argmax()])"
    ]
   },
   {
@@ -1117,6 +1167,7 @@
     "        return None\n",
     "j = None\n",
     "while j is None:\n",
+    "    predict()\n",
     "    print(\"Waiting for outlier logs, sleeping\")\n",
     "    time.sleep(2)\n",
     "    j = get_outlier_event_display_logs()\n",
@@ -1131,7 +1182,7 @@
     "tags": []
    },
    "source": [
-    "## Deploy Seldon Drift Detector"
+    "## Deploy KFServing Drift Detector"
    ]
   },
   {
@@ -1169,9 +1220,9 @@
     "        - --reply_url\n",
     "        - http://default-broker\n",
     "        - --event_type\n",
-    "        - io.seldon.serving.inference.drift\n",
+    "        - org.kubeflow.serving.inference.drift\n",
     "        - --event_source\n",
-    "        - io.seldon.serving.cifar10cd\n",
+    "        - org.kubeflow.serving.cifar10cd\n",
     "        - DriftDetector\n",
     "        - --drift_batch_size\n",
     "        - '500'\n",
@@ -1200,7 +1251,7 @@
     "spec:\n",
     "  filter:\n",
     "    sourceAndType:\n",
-    "      type: io.seldon.serving.inference.request\n",
+    "      type: org.kubeflow.serving.inference.request\n",
     "  subscriber:\n",
     "    ref:\n",
     "      apiVersion: serving.knative.dev/v1\n",
@@ -1229,7 +1280,7 @@
     "tags": []
    },
    "source": [
-    "## Test Seldon Drift Detector"
+    "## Test KFServing Drift Detector"
    ]
   },
   {
@@ -1290,23 +1341,11 @@
     "    with open(\"payload.json\",\"w\") as f:\n",
     "        f.write(payload)\n",
     "    cmd=f\"\"\"curl -d @./payload.json \\\n",
-    "   http://cifar10-classifier-default.{DEPLOY_NAMESPACE}:8000/v1/models/classifier/:predict \\\n",
-    "   -H \"Content-Type: application/json\"\n",
+    "       -H \"Host: kf-cifar10.admin.example.com\" \\\n",
+    "       -H \"Content-Type: application/json\" \\\n",
+    "       http://kfserving-ingressgateway.istio-system/v1/models/kf-cifar10:predict\n",
     "    \"\"\"\n",
     "    run(cmd, shell=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for i in tqdm(range(0,1000,50)):\n",
-    "    X = X_corr[i:i+50]\n",
-    "    predict(X)"
    ]
   },
   {
@@ -1325,17 +1364,21 @@
     "    for i in range(0,len(res)):\n",
     "        if res[i] == 'Data,':\n",
     "            j = json.loads(json.loads(res[i+1]))\n",
-    "            if \"is_drift\"in j[\"data\"].keys():\n",
+    "            if \"is_drift\" in j[\"data\"].keys():\n",
     "                data.append(j)\n",
     "    if len(data) > 0:\n",
     "        return data[-1]\n",
     "    else:\n",
     "        return None\n",
     "j = None\n",
-    "while j is None:\n",
+    "for i in range(0,1000,50):\n",
+    "    X = X_corr[i:i+50]\n",
+    "    predict(X)\n",
     "    print(\"Waiting for drift logs, sleeping\")\n",
     "    time.sleep(2)\n",
     "    j = get_drift_event_display_logs()\n",
+    "    if j is not None:\n",
+    "        break\n",
     "    \n",
     "print(j)\n",
     "print(\"Drift\",j[\"data\"][\"is_drift\"]==1)"
@@ -1360,12 +1403,13 @@
    },
    "outputs": [],
    "source": [
-    "run(f\"kubectl delete sdep cifar10-classifier -n {DEPLOY_NAMESPACE}\", shell=True)\n",
+    "run(f\"kubectl delete inferenceservice kf-cifar10 -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete ksvc cifar10-outlier -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete ksvc cifar10-drift -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete trigger --all -n {DEPLOY_NAMESPACE}\", shell=True)\n",
-    "run(f\"kubectl delete sa  minio-sa -n {DEPLOY_NAMESPACE}\", shell=True)\n",
+    "run(f\"kubectl delete sa  minio-kf-sa -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete secret seldon-init-container-secret -n {DEPLOY_NAMESPACE}\", shell=True)\n",
+    "run(f\"kubectl delete secret cifar10-kf-secret -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete deployment event-display -n {DEPLOY_NAMESPACE}\", shell=True)\n",
     "run(f\"kubectl delete svc event-display -n {DEPLOY_NAMESPACE}\", shell=True)"
    ]
@@ -1373,7 +1417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -1388,9 +1434,9 @@
    "docker_image": "seldonio/jupyter-lab-alibi-kale:0.11",
    "experiment": {
     "id": "new",
-    "name": "seldon-e2e"
+    "name": "kfserving-e2e-cifar10"
    },
-   "experiment_name": "seldon-e2e",
+   "experiment_name": "kfserving-e2e-cifar10",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -1405,8 +1451,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Seldon CIFAR10 Example",
-   "pipeline_name": "seldon-e2e-cifar10",
+   "pipeline_description": "KFServing CIFAR10 Example",
+   "pipeline_name": "kfserving-e2e-cifar10",
    "volumes": []
   },
   "language_info": {
