update pipeline name

--- a/samples/contrib/e2e-outlier-drift-explainer/seldon/seldon_e2e_cifar10.ipynb
+++ b/samples/contrib/e2e-outlier-drift-explainer/seldon/seldon_e2e_cifar10.ipynb
@@ -1388,9 +1388,9 @@
    "docker_image": "seldonio/jupyter-lab-alibi-kale:0.11",
    "experiment": {
     "id": "new",
-    "name": "seldon-e2e"
+    "name": "seldon-e2e-cifar10"
    },
-   "experiment_name": "seldon-e2e",
+   "experiment_name": "seldon-e2e-cifar10",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
